Changelog
=========

1.1b1 ~ unreleased
------------------

- work seamlessly with new version of wildcard.pdfpal so it will only
  create a flex paper after the new searchable PDF is provided.
  

1.0b4 ~ 2010-12-06
------------------

- add wmode transparent for flash params so that flash does not overlap
  other elements.
  
- switch to more accurate time format

- remove temp files even when there was an error


1.0b3 ~ 2010-12-02
------------------

- remove tmp files after using them on flex paper gen


1.0b2 ~ 2010-12-02
------------------

- added support for plone.app.async. Flex Paper conversion can now 
  happen in the background.
  [vangheem]
  

1.0b1 ~ 2010-11-29
------------------

- update flexpaper to 1.4.0
  [vangheem]
  
- auto select page turner view for pdf files now and make configurable
  via portal_properties -> site_properties
  [vangheem]
  
- better error checking when converting PDFs. pdf2swf still seems very
  touchy for converting some PDFs...
  [vangheem]
  
- Added progressive loading, print enabled, full screen visible, 
  search tools visible and cursor tools visible options
  [vangheem]


0.6
---

- Fix for storing blobs.
  [davisagli]

- Don't swallow exceptions while converting; log them.
  [davisagli]

- Use the subprocess module instead of popen2 to communicate with pdf2swf.
  [davisagli]

- Protect the page turner settings page with the "Modify view template"
  permission.
  [davisagli]

- Avoid purging existing view methods for the File type on installation.
  [davisagli]

0.5 ~ 2010-05-21
----------------

- Initial release