@@ -7,6 +7,8 @@ Changelog
 - work seamlessly with new version of wildcard.pdfpal so it will only
   create a flex paper after the new searchable PDF is provided.
   
+- provide ability to provide extra command line options when converting the PDF.
+
 
 1.0b4 ~ 2010-12-06
 ------------------
